Fixing contact form on mobile

--- a/_scss/_contact.scss
+++ b/_scss/_contact.scss
@@ -3,6 +3,9 @@
 }
 .contact__form {
     display: flex;
+    @include b(m){
+        flex-direction: column;
+    }
 }
 .contact__title {
     font-size: 1.8rem;
@@ -12,6 +15,9 @@
     display: flex;
     flex-direction: column;
     margin-right: 1rem;
+    @include b(m){
+        margin-right: 0;
+    }
 }
 .contact__input {
     border-top: none;
@@ -25,6 +31,11 @@
     &:first-of-type {
         border-top: 3px solid $color__black;
     }
+    &:first-of-type {
+        @include b(m){
+            border-top: none;
+        }
+    }
     &:focus {
         color: $color__black;
     }
@@ -36,6 +47,11 @@
     }
     &::-ms-input-placeholder {
         color: $color__black;
+    }
+}
+.contact__input--message {
+    @include b(m){
+        min-height: em(100px);
     }
 }
 .contact__button {
